@@ -90,8 +90,12 @@ BUG FIXES
         to fix #1465 ('R crashes after sekey') reported by Eugene
         Tyurin. We have been unable to reproduce the problem so
         pending user confirm.
-                
-    
+        
+    o   Combining a join, j and by together in one query now works
+        rather than giving an error, fixing bug #1468. Discovered
+        indirectly thanks to a post from Jelmer Ypma.
+
+
 USER-VISIBLE CHANGES
 
     o   The startup banner checks to see if a new version
